src/styles/bundles/select.scss
$select-input-placeholder:          $dp-greyscale-850;
$select-text-color:                 $dp-greyscale-850;

$select-input-height : 24px;
$select-padding-vertical: 10px;
$select-padding-horizontal: 8px;
//$select-input-internal-height: 24px;

$select-option-color: $dp-greyscale-850;

$select-input-border-color: $dp-greyscale-300;

@import "~react-select/scss/default";
@import "~react-bootstrap-multiselect/css/bootstrap-multiselect";

.dp-select {
  font-family: $primary-font;
  font-weight: $pf-regular;

  height: 24px;
  margin-bottom: 10px;
  font-size: $font-size-m;

  .Select-control {
    height: 24px;
    border-radius: $rad-size-m;
  }

  .Select-placeholder,
  &.Select--single > .Select-control .Select-value {
    line-height: 22px;
    height: 22px;
  }

  .Select-input {
    height: 22px;
  }

  .Select-arrow {
    border-width: 3px 3px 1.5px;
  }

  // placeholder
  .Select-placeholder,
  .Select--single > .Select-control .Select-value {
    font-style: italic;
  }

  .Select-menu-outer {
    border-color: $dp-sonic-primary;
    border-top: 0;
  }
  &.Select.is-open > .Select-control {
    border-color: $dp-sonic-primary;
  }
  &, * {
    box-sizing: border-box;
  }

  .multiselect-native-select {
    display: inline-block;
  }
  .btn {
    display: inline-block;
    margin-bottom: 0;
    font-weight: 400;
    text-align: center;
    vertical-align: middle;
    touch-action: manipulation;
    cursor: pointer;
    border: 1px solid transparent;
    white-space: nowrap;
    padding: 6px 12px;
    font-size: 14px;
    line-height: 1.42857143;
    border-radius: 4px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }
  .checkbox, .radio {
    position: relative;
    display: block;
  }
  label {
    display: inline-block;
    max-width: 100%;
  }
  .dropdown-menu {
    top: 100%;
    left: 0;
    z-index: 1000;
    display: none;
    min-width: 160px;
    font-size: 14px;
    text-align: left;
    background-color: #fff;
    border: 1px solid #ccc;
    border: 1px solid rgba(0,0,0,.15);
    border-radius: 4px;
    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
    box-shadow: 0 6px 12px rgba(0,0,0,.175);
    background-clip: padding-box;
    color: $dp-greyscale-850;
  }
  .open > .dropdown-menu {
    display: block;
  }
  .checkbox input[type=checkbox], .checkbox-inline input[type=checkbox], .radio input[type=radio], .radio-inline input[type=radio] {
    position: absolute;
    margin-left: -20px;
  }
  .dropdown-menu>.active>a, .dropdown-menu>.active>a:focus, .dropdown-menu>.active>a:hover {
    text-decoration: none;
    outline: 0;
    background-color: $dp-greyscale-00;
    color: $dp-greyscale-850;
  }
  .dropdown-menu>li>a {
    display: block;
    padding: 0;
    line-height: 1.42857143;
    white-space: nowrap;
    color: $dp-greyscale-850;
  }
  .dropdown-toggle {
    background-color: $dp-greyscale-00;
    border: 1px solid $dp-greyscale-300;
    color: $dp-greyscale-850;
    border-radius: $rad-size-m;
    height: 24px;
    font-family: $primary-font;
    font-size: $font-size-m;
    padding: 0 8px;
    i.fa-caret-down {
      font-size: $icon-size-xs;
      margin-top: -3px;
      vertical-align: middle;
    }
    &:focus {
      outline: 0;
    }
  }
  .multiselect-filter {
    position: relative;
    input.multiselect-search {
      border: 0;
      box-shadow: none;
      font-family: $primary-font;
      &:focus {
        outline: 0;
      }
    }
    input.multiselect-search:placeholder-shown + i.fa-times-circle {
      visibility: hidden;
    }
    i.fa-times-circle {
      color: $dp-greyscale-500;
      position: absolute;
      right: 10px;
      top: 5px;
    }
  }
  .multiselect-container {
    box-shadow: none;
    border: 1px solid $dp-sonic-primary;
    border-radius: $rad-size-m;
    & > li > a > label {
      padding: 3px 10px 3px 30px;
      font-size: $font-size-m;
    }
  }
}

